# VerAI

./: .gitignore  .gitmodules  CMakeLists.txt  prepare_env.sh
Daemon/: CMakeLists.txt  config.cpp  config.h  daemon.cpp  daemon.h  main.cpp  noncopyable.h  torrent.cpp  torrent.h
Daemon/common/: CMakeLists.txt  filesystem.cpp  filesystem.h  message_queue.h  noncopyable.h  uuid.cpp  uuid.h  working_thread.cpp  working_thread.h
Daemon/config/: config.cpp  config.h  config_daemon.cpp  config_daemon.h  config_torrent.cpp  config_torrent.h
Daemon/grpcservice/: CMakeLists.txt  grpc_client.cpp  grpc_client.h  grpc_server.cpp  grpc_server.h
Daemon/grpcservice/protos/: daemon.proto
Daemon/src/: controller.cpp  controller.h  daemon.h  main.cpp  torrent.cpp  torrent.h  torrent_info.cpp  torrent_info.h  torrent_info_manager.cpp  torrent_info_manager.h
Daemon/tests/: CMakeLists.txt  grpc_server.cpp  grpc_torrent_client.cpp
cmake/: FindGRPC.cmake
plog/include/plog/: Log.h
python/: base.py  baseparser.py  factory.py  generator.py  input.data  math_model.json  math_model.py  minus.py  multiply.py  reader.py  reader_bridge.py  reader_file.py  reader_proxy.py  reduce_sum.py  square.py  test.py  train.py  transform_proxy.py  value.py  variable.py
scripts/: docker_build.sh  prepare_env.sh  start_client.sh  start_server_test.sh  udo usermod -aG docker root
scripts/docker/: Dockerfile
tensorflow/: component_loader.py  img_to_num_model.py  input.csv  json_generator.py  json_parser.py  main.py  math_model.json  module_loader.py  reader.py  singleton.py  test.py  train_input.txt  train_target.txt  variable.py
tensorflow/components/: adamoptimizer.py  add.py  argmax.py  base.py  cast.py  dataset.py  equal.py  gradient_descent_optimizer.py  low_level_reader.py  matmul.py  multiply.py  reader.py  reduce_mean.py  reduce_sum.py  softmax_cross_entropy_with_logits.py  square.py  subtract.py  variable.py  zeros.py
tensorflow/components/dataset/: data_test.txt  dataset.py  dataset_base.py  dataset_tensor.json  target_test.txt  target_validate.txt  test.py
tensorflow/dataset/: data_train.txt  data_validate.txt  dataset.py  dataset_base.py  dataset_handler.py  dataset_reader.py  generate_dataset.py  multithreaded_data_provider.py  outputs.json  target_train.txt  test.py
tensorflow/json/: AdamOptimizer_a588ddc5c07436a796439c0271d1f7169fd55e1e.json  Add_886525c335f905e23a67b7f63886332522e02a63.json  Argmax_d8f0f987114ee5497c5dcdb77d5202d26f4a2d2e.json  Cast_875a2764da00c49bcf07ab486047d3324bd43218.json  DataSet_0998d0a8cf67ad3804346571946e5ee295ba3a22.json  Equal_01caf7fb41e1cf8e15ddd7e7c1b8ef7771e44de8.json  GradientDescentOptimizer_984f2f1fffdbbb2076a3f1700ed5840df953aca5.json  Matmul_df82ffe08cfd36a7bbd7c0d0cfede70de4bbc860.json  Multiply_012e78112187342c217c8082db09b941db911b5d.json  ReduceMean_b67d8acd874ca3a361f46eae5da94a104323845f.json  ReduceSum_c65f6d22cf418b940376e6a51b0181e76178ae25.json  SoftmaxCrossEntropyWithLogits_0948670973339564569f1f712e631501e596adcb.json  Square_53a8c90b7254599a039d431ab4f6e8f35aa26e6d.json  Subtract_6d189307bf5d88fc699d1bc7e1746bdae5ec733f.json  Variable_58347d53140fccd81f8f41819fec6f1c85a851f9.json  Zeros_25e818a90e1054cabca174b3d06db8f3496db86a.json
tensorflow/tensors/: adamoptimizer.py  base.py  minus.py  multiply.py  reduce_sum.py  square.py  variable.py
